--- a/css/images.css
+++ b/css/images.css
@@ -1,7 +1,7 @@
 .version.images /* version checker */
 {
-	color: #00000C;
-	background-color: #65659C;
+	color: #000019;
+	background-color: #1F9997;
 }
 
 .html
@@ -12,15 +12,414 @@
 #page
 {
 	z-index: 1;
-	width: 181px;
-	min-height: 96px;
+	width: 1880px;
+	min-height: 956px;
 	background-image: none;
 	border-style: none;
 	border-color: #000000;
 	background-color: transparent;
 	margin-left: auto;
 	margin-right: auto;
-	padding: 922px 20px 62px 1719px;
+	padding: 62px 20px;
+}
+
+#menuu347
+{
+	z-index: 7;
+	width: 1880px;
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	position: relative;
+}
+
+#u383
+{
+	width: 468px;
+	min-height: 52px;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+}
+
+#u384
+{
+	width: 468px;
+	background-color: #C4C4C4;
+	padding-bottom: 35px;
+	position: relative;
+}
+
+#u384:hover
+{
+	background-color: #999999;
+	width: 468px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u384:active
+{
+	background-color: #6B6B6B;
+	width: 468px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u386-4
+{
+	width: 468px;
+	min-height: 17px;
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	text-align: center;
+	color: #FFFFFF;
+	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
+	position: relative;
+	margin-right: -10000px;
+	top: 17px;
+}
+
+#u384:hover #u386-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 468px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u384:active #u386-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 468px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u355
+{
+	width: 468px;
+	min-height: 52px;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+	left: 470px;
+}
+
+#u372
+{
+	width: 468px;
+	background-color: #C4C4C4;
+	padding-bottom: 35px;
+	position: relative;
+}
+
+#u372.MuseMenuActive
+{
+	background-color: #999999;
+	width: 468px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u373-4
+{
+	width: 468px;
+	min-height: 17px;
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	text-align: center;
+	color: #FFFFFF;
+	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
+	position: relative;
+	margin-right: -10000px;
+	top: 17px;
+	left: 0px;
+}
+
+#u384.MuseMenuActive #u386-4,#u372:hover #u373-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 468px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u372:active #u373-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 468px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u372.MuseMenuActive #u373-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 468px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u356
+{
+	width: 120px;
+	background-color: transparent;
+	top: 52px;
+}
+
+#u359
+{
+	width: 118px;
+	border-width: 1px;
+	border-style: solid;
+	border-color: #777777;
+	background-color: #FFFFFF;
+	padding-bottom: 4px;
+	position: relative;
+	margin-right: -10000px;
+}
+
+#u361-4
+{
+	width: 110px;
+	min-height: 13px;
+	background-color: transparent;
+	padding-left: 2px;
+	padding-top: 4px;
+	padding-right: 2px;
+	font-size: 11px;
+	text-align: center;
+	line-height: 13px;
+	position: relative;
+	margin-right: -10000px;
+	top: 2px;
+	left: 2px;
+}
+
+#u359:hover #u361-4
+{
+	padding-top: 4px;
+	padding-bottom: 0px;
+	min-height: 13px;
+	width: 110px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u363
+{
+	width: 120px;
+	background-color: transparent;
+	left: 120px;
+}
+
+#u357,#u358,#u364,#u365
+{
+	width: 120px;
+	background-color: transparent;
+	position: relative;
+}
+
+#u366
+{
+	width: 118px;
+	border-width: 1px;
+	border-style: solid;
+	border-color: #777777;
+	background-color: #FFFFFF;
+	padding-bottom: 4px;
+	position: relative;
+	margin-right: -10000px;
+}
+
+#u359:hover,#u366:hover
+{
+	background-color: #AAAAAA;
+	width: 118px;
+	min-height: 0px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u369-4
+{
+	width: 110px;
+	min-height: 13px;
+	background-color: transparent;
+	padding-left: 2px;
+	padding-top: 4px;
+	padding-right: 2px;
+	font-size: 11px;
+	text-align: center;
+	line-height: 13px;
+	position: relative;
+	margin-right: -10000px;
+	top: 2px;
+	left: 2px;
+}
+
+#u359.MuseMenuActive #u361-4,#u366:hover #u369-4
+{
+	padding-top: 4px;
+	padding-bottom: 0px;
+	min-height: 13px;
+	width: 110px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u366.MuseMenuActive #u369-4
+{
+	padding-top: 4px;
+	padding-bottom: 0px;
+	min-height: 13px;
+	width: 110px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u348
+{
+	width: 469px;
+	min-height: 52px;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+	left: 940px;
+}
+
+#u349
+{
+	width: 469px;
+	background-color: #C4C4C4;
+	padding-bottom: 35px;
+	position: relative;
+}
+
+#u349:hover
+{
+	background-color: #999999;
+	width: 469px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u351-4
+{
+	width: 469px;
+	min-height: 17px;
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	text-align: center;
+	color: #FFFFFF;
+	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
+	position: relative;
+	margin-right: -10000px;
+	top: 17px;
+}
+
+#u349:hover #u351-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 469px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u349:active #u351-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 469px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u376
+{
+	width: 469px;
+	min-height: 52px;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+	left: 1411px;
+}
+
+#u379
+{
+	width: 469px;
+	background-color: #C4C4C4;
+	padding-bottom: 35px;
+	position: relative;
+}
+
+#u379:hover
+{
+	background-color: #999999;
+	width: 469px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u349:active,#u379:active
+{
+	background-color: #6B6B6B;
+	width: 469px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u381-4
+{
+	width: 469px;
+	min-height: 17px;
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	text-align: center;
+	color: #FFFFFF;
+	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
+	position: relative;
+	margin-right: -10000px;
+	top: 17px;
+}
+
+#u349.MuseMenuActive #u351-4,#u379:hover #u381-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 469px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u379:active #u381-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 469px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u379.MuseMenuActive #u381-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 469px;
+	margin: 0px -10000px 0px 0px;
+}
+
+.MenuItem /* unifiedNavBar */
+{
+	cursor: pointer;
 }
 
 #u235-4
@@ -29,6 +428,8 @@
 	width: 151px;
 	min-height: 50px;
 	background-color: transparent;
+	margin-left: 1699px;
+	margin-top: 808px;
 	position: relative;
 }
 
@@ -40,7 +441,7 @@
 	border-style: none;
 	border-color: transparent;
 	background-color: transparent;
-	margin-left: 31px;
+	margin-left: 1730px;
 	margin-top: 15px;
 	position: relative;
 }
