--- a/css/tools.css
+++ b/css/tools.css
@@ -1,7 +1,7 @@
 .version.tools /* version checker */
 {
-	color: #00000F;
-	background-color: #11B653;
+	color: #00001D;
+	background-color: #ACE923;
 }
 
 .html
@@ -12,15 +12,406 @@
 #page
 {
 	z-index: 1;
-	width: 181px;
-	min-height: 54px;
+	width: 1880px;
+	min-height: 956px;
 	background-image: none;
 	border-style: none;
 	border-color: #000000;
 	background-color: transparent;
 	margin-left: auto;
 	margin-right: auto;
-	padding: 964px 20px 62px 1719px;
+	padding: 62px 20px;
+}
+
+#menuu390
+{
+	z-index: 7;
+	width: 1880px;
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	position: relative;
+}
+
+#u426
+{
+	width: 468px;
+	min-height: 52px;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+}
+
+#u427
+{
+	width: 468px;
+	background-color: #C4C4C4;
+	padding-bottom: 35px;
+	position: relative;
+}
+
+#u427:hover
+{
+	background-color: #999999;
+	width: 468px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u429-4
+{
+	width: 468px;
+	min-height: 17px;
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	text-align: center;
+	color: #FFFFFF;
+	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
+	position: relative;
+	margin-right: -10000px;
+	top: 17px;
+}
+
+#u427:hover #u429-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 468px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u427:active #u429-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 468px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u398
+{
+	width: 468px;
+	min-height: 52px;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+	left: 470px;
+}
+
+#u415
+{
+	width: 468px;
+	background-color: #C4C4C4;
+	padding-bottom: 35px;
+	position: relative;
+}
+
+#u415:hover
+{
+	background-color: #999999;
+	width: 468px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u427:active,#u415:active
+{
+	background-color: #6B6B6B;
+	width: 468px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u416-4
+{
+	width: 468px;
+	min-height: 17px;
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	text-align: center;
+	color: #FFFFFF;
+	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
+	position: relative;
+	margin-right: -10000px;
+	top: 17px;
+}
+
+#u427.MuseMenuActive #u429-4,#u415:hover #u416-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 468px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u415:active #u416-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 468px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u415.MuseMenuActive #u416-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 468px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u399
+{
+	width: 120px;
+	background-color: transparent;
+	top: 52px;
+}
+
+#u402
+{
+	width: 118px;
+	border-width: 1px;
+	border-style: solid;
+	border-color: #777777;
+	background-color: #FFFFFF;
+	padding-bottom: 4px;
+	position: relative;
+	margin-right: -10000px;
+}
+
+#u404-4
+{
+	width: 110px;
+	min-height: 13px;
+	background-color: transparent;
+	padding-left: 2px;
+	padding-top: 4px;
+	padding-right: 2px;
+	font-size: 11px;
+	text-align: center;
+	line-height: 13px;
+	position: relative;
+	margin-right: -10000px;
+	top: 2px;
+	left: 2px;
+}
+
+#u402:hover #u404-4
+{
+	padding-top: 4px;
+	padding-bottom: 0px;
+	min-height: 13px;
+	width: 110px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u406
+{
+	width: 120px;
+	background-color: transparent;
+	left: 120px;
+}
+
+#u400,#u401,#u407,#u408
+{
+	width: 120px;
+	background-color: transparent;
+	position: relative;
+}
+
+#u409
+{
+	width: 118px;
+	border-width: 1px;
+	border-style: solid;
+	border-color: #777777;
+	background-color: #FFFFFF;
+	padding-bottom: 4px;
+	position: relative;
+	margin-right: -10000px;
+}
+
+#u402:hover,#u409:hover
+{
+	background-color: #AAAAAA;
+	width: 118px;
+	min-height: 0px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u412-4
+{
+	width: 110px;
+	min-height: 13px;
+	background-color: transparent;
+	padding-left: 2px;
+	padding-top: 4px;
+	padding-right: 2px;
+	font-size: 11px;
+	text-align: center;
+	line-height: 13px;
+	position: relative;
+	margin-right: -10000px;
+	top: 2px;
+	left: 2px;
+}
+
+#u402.MuseMenuActive #u404-4,#u409:hover #u412-4
+{
+	padding-top: 4px;
+	padding-bottom: 0px;
+	min-height: 13px;
+	width: 110px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u409.MuseMenuActive #u412-4
+{
+	padding-top: 4px;
+	padding-bottom: 0px;
+	min-height: 13px;
+	width: 110px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u391
+{
+	width: 469px;
+	min-height: 52px;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+	left: 940px;
+}
+
+#u392
+{
+	width: 469px;
+	background-color: #C4C4C4;
+	padding-bottom: 35px;
+	position: relative;
+}
+
+#u394-4
+{
+	width: 469px;
+	min-height: 17px;
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	text-align: center;
+	color: #FFFFFF;
+	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
+	position: relative;
+	margin-right: -10000px;
+	top: 17px;
+	left: 0px;
+}
+
+#u392:hover #u394-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 469px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u392:active #u394-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 469px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u419
+{
+	width: 469px;
+	min-height: 52px;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+	left: 1411px;
+}
+
+#u422
+{
+	width: 469px;
+	background-color: #C4C4C4;
+	padding-bottom: 35px;
+	position: relative;
+}
+
+#u392.MuseMenuActive,#u422:hover
+{
+	background-color: #999999;
+	width: 469px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u422:active
+{
+	background-color: #6B6B6B;
+	width: 469px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u424-4
+{
+	width: 469px;
+	min-height: 17px;
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	text-align: center;
+	color: #FFFFFF;
+	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
+	position: relative;
+	margin-right: -10000px;
+	top: 17px;
+}
+
+#u392.MuseMenuActive #u394-4,#u422:hover #u424-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 469px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u422:active #u424-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 469px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u422.MuseMenuActive #u424-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 469px;
+	margin: 0px -10000px 0px 0px;
+}
+
+.MenuItem /* unifiedNavBar */
+{
+	cursor: pointer;
 }
 
 #u242-4
@@ -29,6 +420,8 @@
 	width: 151px;
 	min-height: 50px;
 	background-color: transparent;
+	margin-left: 1699px;
+	margin-top: 850px;
 	position: relative;
 }
 
@@ -40,7 +433,7 @@
 	border-style: none;
 	border-color: transparent;
 	background-color: transparent;
-	margin-left: 31px;
+	margin-left: 1730px;
 	margin-top: 15px;
 	position: relative;
 }
