--- a/css/photoshoped.css
+++ b/css/photoshoped.css
@@ -1,7 +1,7 @@
 .version.photoshoped /* version checker */
 {
-	color: #000017;
-	background-color: #DF9EB6;
+	color: #0000E9;
+	background-color: #2C36E1;
 }
 
 .html
@@ -431,14 +431,52 @@
 	cursor: pointer;
 }
 
+#u869
+{
+	z-index: 48;
+	width: 1280px;
+	background-color: transparent;
+	margin-left: 300px;
+	margin-top: 88px;
+	position: relative;
+}
+
+#u889
+{
+	z-index: 50;
+	width: 1880px;
+	background-color: transparent;
+	margin-top: 122px;
+	position: relative;
+}
+
+#u895
+{
+	z-index: 52;
+	width: 1500px;
+	background-color: transparent;
+	margin-left: 190px;
+	margin-top: 122px;
+	position: relative;
+}
+
+#u901
+{
+	z-index: 54;
+	width: 1876px;
+	background-color: transparent;
+	margin-top: 115px;
+	position: relative;
+}
+
 #u251-4
 {
 	z-index: 3;
 	width: 151px;
 	min-height: 50px;
 	background-color: transparent;
-	margin-left: 1699px;
-	margin-top: 808px;
+	margin-left: 1708px;
+	margin-top: 91px;
 	position: relative;
 }
 
@@ -451,7 +489,7 @@
 	border-color: transparent;
 	background-color: transparent;
 	margin-left: 1730px;
-	margin-top: 15px;
+	margin-top: 17px;
 	position: relative;
 }
 
